syntax = "proto3";
package Device;
//连接设备
service DeviceService {
  rpc Connect (ConnectRequest) returns (ConnectResponse) {}
  rpc SaveVideo (SaveVideoClientRequest) returns (SaveVideoClientResponse) {}
}

message ConnectRequest{
  string serId = 1; //设备序列号

}
message ConnectResponse{
  bool status = 1; //启动状态
  string port = 2; //启动端口
}
service DeviceAgentService {
  //测试是否启动成功
  rpc Ping (PingRequest) returns (PingResponse) {}
  //视频流
  rpc VideoStream (VideoStreamRequest) returns (stream VideoStreamResponse) {}
  //控制
  rpc ControlStream (stream ControlStreamRequest) returns (stream ControlStreamResponse) {}
  //安装应用
  rpc InstallApp (InstallAppRequest) returns (stream InstallAppStreamResponse) {}
  //log流
  rpc LogStream (stream LogStreamRequest) returns (stream LogStreamResponse) {}
  //远程调试
  rpc RemoteDebug (RemoteDebugRequest) returns (RemoteDebugResponse) {}
  rpc ResetEnv (ResetEnvRequest) returns (ResetEnvResponse) {}
  rpc VerifyCode (VerifyCodeRequest) returns (VerifyCodeResponse) {}
  rpc Stop (StopRequest) returns (StopResponse) {}
}

message PingRequest{
}
message PingResponse{

  enum status {
    Wait = 0 ; //等待
    Success = 1 ; //成功
    Fail = 2 ; //失败
  };
  status Status = 1;
  string VideoPort = 2; //视频端口
  string ControlPort = 3; //控制端口
}
message VideoStreamRequest{
}
message VideoStreamResponse{
  bytes PicBytes = 1; //图片数据
}
message ControlStreamRequest{
  string command = 1; //操作指令
}
message ControlStreamResponse{
  string result = 1; //执行结果
}
message InstallAppRequest{
  string url = 1; //文件地址
  string uid = 2; //设备id
}
message InstallAppStreamResponse{
  string result = 1; //安装查询的id
}
message LogStreamRequest{
  bool status = 1;//标志开始结束
  int32 logId = 2;//云测logId
  int32 userId = 3;//用户id
  int32 groupId = 4;//组id
}
message LogStreamResponse{
  string data = 1; //log数据
}
message SaveVideoClientRequest{
  bool status = 1;//标志开始结束
  int32 logId = 2;//云测logId
  int32 port = 3;//视频端口
  string uid = 4; //设备id
  int32 userId = 5;//用户id
  int32 groupId = 6;//组id
}
message SaveVideoClientResponse{
  string msg = 1;
}

message RemoteDebugRequest{
  bool status = 1; //开关
}
message RemoteDebugResponse{
  string host = 1; //远程host
  string port = 2; //远程端口
}
message ResetEnvRequest{
}
message ResetEnvResponse{
  bool status = 1; //重置状态
}
message VerifyCodeRequest{
  string code = 1;//签发的code
}
message VerifyCodeResponse{
  bool status = 1; //验证状态
}
message StopRequest{
  string code = 1;//签发的code
}
message StopResponse{
}